--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "author": "",
   "engines": {
-    "node": "8.11.1"
+    "node": "8.9.4",
+    "npm": "5.6.0"
   },
   "license": "ISC",
   "bugs": {
